# backend_technologies

./: pyproject.toml
hollymovies/: db.sqlite3
hollymovies/accounts/: views.py
hollymovies/accounts/templates/: signup.html
hollymovies/accounts/templates/registration/: login.html
hollymovies/api/: serializers.py
hollymovies/data/: Movies.csv  Staff.csv
hollymovies/hollymovies/: settings.py  urls.py
hollymovies/viewer/: admin.py  models.py  tests.py  views.py
hollymovies/viewer/migrations/: 0001_initial.py  0002_movie.py  0003_agerestriction_award_awardcategory_country_image_and_more.py  0004_alter_movie_age_restriction_remove_movie_country_and_more.py  0005_alter_movie_released.py  0006_alter_movie_country.py  0007_alter_movie_genre_alter_movie_images.py  0008_alter_staff_awards.py  0009_alter_genre_options.py  0010_movie_last_visit_alter_rating_movie.py
hollymovies/viewer/static/: my_style.css  style.css
hollymovies/viewer/templates/: base.html  hello.html  home.html  movies.html  navbar.html
