[tool.poetry]
name = "backend-technologies"
version = "0.1.0"
description = ""
authors = ["MartyMarkCz <martin.mika.de@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_technologies"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
